--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index"
+    "start": "SET \"NODE_ENV=staging\" && nodemon index",
+    "production": "SET \"NODE_ENV=production\" && nodemon index"
   },
   "keywords": [],
   "author": "",
